[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blivet"
version = "3.13.0"
description = "Python module for system storage configuration"
readme = "README.md"
license = {file = "COPYING"}
dependencies = ["pyudev", "dasbus"]
maintainers = [
  {name = "Vojtech Trefny", email = "vtrefny@redhat.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Operating System"
]

[project.urls]
issues = "https://github.com/storaged-project/blivet/issues"
source = "https://github.com/storaged-project/blivet"
releasenotes = "https://github.com/storaged-project/blivet/blob/main/release_notes.rst"
documentation = "https://storaged.org/blivet/"

[tool.setuptools]
packages = ["blivet", "blivet.dbus", "blivet.devices", "blivet.devicelibs", "blivet.events",
            "blivet.formats", "blivet.populator", "blivet.static_data", "blivet.tasks",
            "blivet.populator.helpers"]
